# ai_agent_information

OpenCrab/: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.toml
OpenCrab/crabharness/: .gitignore  README.md  package.json  pyproject.toml  soeak-detail-crawler.ts  tsconfig.json
OpenCrab/crabharness/codex_workers/: __init__.py
OpenCrab/crabharness/codex_workers/github_trending/: adapter.py  worker.manifest.json
OpenCrab/crabharness/codex_workers/landscape/: adapter.py  runner.py  worker.manifest.json
OpenCrab/crabharness/codex_workers/soeak/: adapter.py  worker.manifest.json
OpenCrab/crabharness/configs/: policy.example.yaml  sources.example.yaml
OpenCrab/crabharness/crabharness/: __init__.py  apply.py  cli.py  config.py  dedupe.py  delegation.py  harness_loop.py  models.py  planner.py  preflight.py  promotion.py  registry.py  runtime.py  semantic.py
OpenCrab/crabharness/docs/plans/: 2026-04-11-meta-crawler-plan.md
OpenCrab/crabharness/missions/examples/: github-trending-harvest.json  landscape-construction-ai-usecases.json  soeak-bidcase.json
OpenCrab/crabharness/schemas/: artifact-bundle.schema.json  delegation-job.schema.json  mission.schema.json  promotion-package.schema.json  validation-report.schema.json
OpenCrab/opencrab/: __init__.py  cli.py  config.py
multiclaw/: .gitignore  Makefile  README.md  install-admin.bat  install-simple.bat  install-venv.bat  install.bat  run-all-venv.bat  run-all.bat  run-backend.bat  run-frontend.bat  setup-env.bat
nanoclaw/: README.md
openclaw/: README.md
(+91 files in other folders)
